<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Final Project</string>
    <string name="action_settings">Settings</string>
    <string name="searchButton">Search</string>
    <string name="searchBar">Search News Headlines</string>
    <string name="sourceText">Source:</string>
    <string name="authorText">Author:</string>
    <string name="titleText">Title:</string>
    <string name="descriptionText">Description:</string>
    <string name="urlText">URL:</string>
    <string name="publishedAtText">Published at:</string>
    <string name="contentText">Content:</string>
    <string name="content">Content of the News Headline should be here</string>
    <string name="source">Source of the News Headline should be here</string>
    <string name="author">Author of the News Headline should be here</string>
    <string name="title">Title of the News Headline should be here</string>
    <string name="description">Description of the News Headline should be here</string>
    <string name="url">URL of the News Headline should be here</string>
    <string name="mainTitle">CST2335 Graphical Interface Programming Final Project</string>
    <string name="newsButton">News Headlines</string>
    <string name="carButton">Electric Car Charging Station Finder</string>
    <string name="recipeButton">Recipe Search Engine</string>
    <string name="currencyButton">Foreign Currency Conversion</string>
    <string name="searchButtonString">Search for Charging Stations</string>
    <string name="favoriteButtonString">Go to Favorites</string>
    <string name="aboutButtonString">About</string>
    <string name="searchBarString">Search Charging Stations</string>
    <string name="searchButtonText">Search Charging Stations</string>
    <string name="longString">Longitude</string>
    <string name="latString">Latitude</string>
    <string name="helpButton">Help</string>
    <string name="chargingFavoriteToolbarString">Favorites</string>
    <string name="chargingSearchToolbarString">Search</string>
    <string name="chargingHomeToolbarString">Charging Station</string>
    <string name="chargingAboutString">About</string>
    <string name="chargingViewMapButtonString">View Map</string>
    <string name="chargingAboutAuthorString">Author: Bea King</string>
    <string name="chargingAboutVersionString">Version: 4.2</string>
    <string name="chargingAboutInstructionsTitleString">How to use</string>
    <string name="chargingAboutInstructionsString">You can search by clicking the magnifying glass icon in the toolbar.\n\n
    The search takes two parameters: longitude and latitude.\n\n
    When you select a result, you can add the result to your favorites for later use.\n\n
    You can also view where the result is in the Google Maps app.\n\n
    You can navigate to your favorites by clicking the heart icon in the toolbar. In Favorites, you cna select an item and view where it is in google
    maps, or delete it from your favorites.</string>
    <string name="versionNumber">Version Number</string>
    <string name="newsExplanation">How to use: Type something into the searchbar, then click the search button to search for news headlines that match your search phrase. You will then see a list of news headlines, you can click on them to see more detailed information about them.</string>
    <string name="searchingFor">Searching for</string>
    <string name="searchCompleteDisplaying">Search complete. Displaying</string>
    <string name="outOf">out of</string>
    <string name="totalResultsFound">total results found.</string>
    <string name="webButton">Go To Website To View More</string>
    <string name="saveButton">Save For Offline Viewing</string>
    <string name="savedButton">View Saved Articles</string>
    <string name="okay">Okay</string>
    <string name="deleteButton">Delete this news article from local storage</string>
    <string name="saved">Article successfully saved. You can now view it while offline.</string>
    <string name="deleted">This article has been successfully deleted from local storage.</string>
    <string name="electricCarChargingStationFinder">Electric Car Charging Station Finder</string>
    <string name="recipeSearchEngine">Recipe Search Engine</string>
    <string name="foreignCurrencyConverter">Foreign Currency Converter</string>
    <string name="newsHeadlines">News Headlines</string>
    <string name="newsHome">Main News Headlines Page</string>
    <string name="searchNewsHeadlines">Search News Headlines</string>
    <string name="newsFavourites">Saved News Headlines</string>
    <string name="newsAbout">Info About This Activity</string>
    <string name="chargingAboutToolbarString">About</string>
</resources>
