<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sourceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/sourceText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/source"
        android:layout_toRightOf="@+id/sourceText"/>

    <TextView
        android:id="@+id/authorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/authorText"
        android:layout_below="@+id/sourceText"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/author"
        android:layout_toRightOf="@+id/authorText"
        android:layout_below="@+id/source"/>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/titleText"
        android:layout_below="@+id/authorText"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/title"
        android:layout_toRightOf="@+id/titleText"
        android:layout_below="@+id/author"/>

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/descriptionText"
        android:layout_below="@+id/titleText"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/description"
        android:layout_toRightOf="@+id/descriptionText"
        android:layout_below="@+id/title" />

    <TextView
        android:id="@+id/urlText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/urlText"
        android:layout_below="@+id/descriptionText"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/url"
        android:layout_toRightOf="@+id/urlText"
        android:layout_below="@+id/description"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/urlText"
        android:src="@drawable/placeholder"/>

    <TextView
        android:id="@+id/publishedAtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/publishedAtText"
        android:layout_below="@+id/image"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/publishedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/title"
        android:layout_toRightOf="@+id/publishedAtText"
        android:layout_below="@+id/image"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/content"
        android:layout_below="@+id/publishedAtText" />


</RelativeLayout>
