<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeItem"
        android:icon="@drawable/ic_house"
        android:title="@string/newsHome"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchItem"
        android:icon="@drawable/ic_search"
        android:title="@string/searchNewsHeadlines"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favoriteItem"
        android:icon="@drawable/ic_heart"
        android:title="@string/newsFavourites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/aboutItem"
        android:icon="@drawable/ic_info"
        android:title="@string/newsAbout"
        app:showAsAction="ifRoom" />

</menu>